swf not up to date currently

--- a/README
+++ b/README
@@ -9,6 +9,12 @@
 *
 **/
 
+2012/06/07
+SWF is currently not the latest version (video size is 320x240) you need to recompile to have Video stream
+resize same as flash object size (js variables)
+Ill review and update code soon and release fresh swf with addition options regarding latest changes.
+
+
 jQuery AS3 Webcam, you will be able to make JPEG captures of web camera, all interactions are made thru javascript.
 Javascript callback will receive base64 encoded JPEG image from webcamera.
 
