--- a/README
+++ b/README
@@ -4,24 +4,20 @@
 * Copyright (c) 2012, Sergey Shilko (sergey.shilko@gmail.com)
 * 
 * @author Sergey Shilko
-* @version 1.1
+* @version 1.2
 * @see https://github.com/sshilko/jQuery-AS3-Webcam
 *
 **/
 
-2012/06/07
-SWF is currently not the latest version (video size is 320x240) you need to recompile to have Video stream
-resize same as flash object size (js variables)
-Ill review and update code soon and release fresh swf with addition options regarding latest changes.
-
-
 jQuery AS3 Webcam, you will be able to make JPEG captures of web camera, all interactions are made thru javascript.
-Javascript callback will receive base64 encoded JPEG image from webcamera.
+Javascript callback will receive base64 encoded JPEG image from webcamera. Support different webcam resolutions (320x240, 640x480, any).
+Adaptive stage scaling (scale to fit actual webcamera resolution set), stage:video scaling 1:1.
 
 /* SWF external interface:
  * webcam.save() - get base64 encoded JPEG image 
  * webcam.getCameraList() - get list of available cams
  * webcam.setCamera(i) - set camera, camera index retrieved with getCameraList
+ * webcam.getResolution() - retrieve actual web camera resolution (set width may not equal result width etc)
  * */
 
 /* External triggers on events:
