--- a/README
+++ b/README
@@ -2,9 +2,8 @@
 * jQuery AS3 Webcam
 *
 * Copyright (c) 2012, Sergey Shilko (sergey.shilko@gmail.com)
-* 
+*
 * @author Sergey Shilko
-* @version 1.2
 * @see https://github.com/sshilko/jQuery-AS3-Webcam
 *
 **/
@@ -13,19 +12,21 @@ jQuery AS3 Webcam, you will be able to make JPEG captures of web camera, all int
 Javascript callback will receive base64 encoded JPEG image from webcamera. Support different webcam resolutions (320x240, 640x480, any).
 Adaptive stage scaling (scale to fit actual webcamera resolution set), stage:video scaling 1:1.
 
-/* SWF external interface:
- * webcam.save() - get base64 encoded JPEG image 
- * webcam.getCameraList() - get list of available cams
- * webcam.setCamera(i) - set camera, camera index retrieved with getCameraList
- * webcam.getResolution() - retrieve actual web camera resolution (set width may not equal result width etc)
- * */
+IMPORTANT: You must run example on webserver, it will not work by opening example.html in browser straight from filesystem because of flash/flex restrictions.
 
-/* External triggers on events:
- * webcam.isClientReady() - you respond to SWF with true (by default) meaning javascript is ready to accept callbacks
- * webcam.cameraConnected() - camera connected callback from SWF
- * webcam.noCameraFound() - SWF response that it cannot find any suitable camera
- * webcam.cameraEnabled() - SWF response when camera tracking is enabled (this is called multiple times, use isCameraEnabled flag)
- * webcam.cameraDisabled()- SWF response, user denied usage of camera
- * webcam.swfApiFail()    - Javascript failed to make call to SWF
- * webcam.debug()         - debug callback used from SWF and can be used from javascript side too
- * */
+SWF external interface:
+webcam.save() - get base64 encoded JPEG image
+webcam.getCameraList() - get list of available cams
+webcam.setCamera(i) - set camera, camera index retrieved with getCameraList
+webcam.getResolution() - retrieve actual web camera resolution (set width may not equal result width etc)
+
+External triggers on events:
+webcam.isClientReady() - you respond to SWF with true (by default) meaning javascript is ready to accept callbacks
+webcam.cameraConnected() - camera connected callback from SWF
+webcam.noCameraFound() - SWF response that it cannot find any suitable camera
+webcam.cameraEnabled() - SWF response when camera tracking is enabled (this is called multiple times, use isCameraEnabled flag)
+webcam.cameraDisabled()- SWF response, user denied usage of camera
+webcam.swfApiFail()    - Javascript failed to make call to SWF
+webcam.debug()         - debug callback used from SWF and can be used from javascript side too
+
+and more...
