--- a/README
+++ b/README
@@ -14,6 +14,10 @@ Adaptive stage scaling (scale to fit actual webcamera resolution set), stage:vid
 
 IMPORTANT: You must run example on webserver, it will not work by opening example.html in browser straight from filesystem because of flash/flex restrictions.
 
+Hosted example
+
+http://sshilko.github.io/examples/jQuery-AS3-Webcam/example.html
+
 SWF external interface:
 webcam.save() - get base64 encoded JPEG image
 webcam.getCameraList() - get list of available cams
